--- a/packages/wtqdocs/styles/theme.scss
+++ b/packages/wtqdocs/styles/theme.scss
@@ -76,7 +76,7 @@
     .subtitle {
       max-width: var(--subtitle-width);
       margin-bottom: 24px;
-
+      text-wrap: balance;
       font-size: clamp(1.5rem, 3vw, 2rem);
       font-weight: 500;
       color: hsl(var(--dark));
